Criando a seção Tecnologia

--- a/css_support_class/css/index.html
+++ b/css_support_class/css/index.html
@@ -17,7 +17,10 @@
                         <a href="#sports" title="Ir para a seção de esportes">Esportes</a>
                     </li>
                     <li>
-                        <a href="#economy" title="Ir para a seção de notícias">Economia</a>
+                        <a href="#economy" title="Ir para a seção de economia">Economia</a>
+                    </li>
+                    <li>
+                        <a href="#tecnologia" title="Ir para a seção de tecnologia">Tecnologia</a>
                     </li>
                 </ul>
             </nav>
@@ -108,6 +111,48 @@
                     <h3>Alta no preço do barril do petróleo</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section id="tecnologia">
+        <div class="container">
+            <h2>Tecnologia</h2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/bard_logo.png" alt="Logo da AI Bard">
+                    <header>
+                        <time>10/08/2023 às 22:00</time>
+                    </header>
+                    <h3>Bard inteligência artificial do Google</h3>
+                    <p>
+                        O Google Bard é um chatbot de Inteligência Artificial desenvolvido pelo Google que foi criado para responder perguntas e interagir com os usuários como se fosse um ser humano. Ele é baseado no modelo de linguagem de IA chamado PaLM 2 e está disponível em mais de 40 idiomas. <br>
+                        Para acessar Basta entrar no endereço <a href="https://bard.google.com" target="_blank" class="link-externo">bard.google.com</a> tanto pelo celular quanto pelo computador. 
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>     
+                </article>
+                <article>
+                    <img src="./imagens/apple vision pro.jpg" alt=" Apple vision pro">
+                    <header>
+                        <time>10/08/2023 às 22:00</time>
+                    </header>
+                    <h3>Apple Vision Pro: novos óculos de realidade mista da Apple</h3>
+                    <p>
+                        O lançamento do Apple Vision Pro foi o principal destaque da <abbr title="Apple Worldwide Developers Conference
+                        ">WWDC</abbr> 2023. Anunciados pela Apple e apresentados como <q>o produto mais ambicioso que já criamos</q>, os óculos de realidade mista da empresa são um dispositivo que combina Realidade Virtual (VR) e Realidade Aumentada (AR). A tecnologia permite oferecer uma experiência imersiva ao usuário – seja para entretenimento, trabalho ou estudo. Diferentemente de outros concorrentes do mercado, como o Meta Quest Pro, o modelo é controlado inteiramente pela voz, movimento dos olhos e mãos do usuário — dispensando o uso de controles físicos.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/chatgpt-logo.png" alt="ChatGPT logo">
+                    <header>
+                        <time>10/08/2023 às 22:00</time>
+                    </header>
+                    <h3>ChatGPT erra mais de 50% das respostas em estudo de universidade dos EUA</h3>
+                    <p>
+                        Um estudo da universidade de Purdue, nos EUA, decidiu testar a eficácia do ChatGPT para responder a centenas de perguntas sobre engenharia de software. O resultado não foi muito animador para a IA, com 52% das respostas incorretas. A intenção da pesquisa era comparar as respostas do ChatGPT com as do Stack Overflow, uma plataforma popular entre desenvolvedores e engenheiros de software para a consulta de dúvidas. 
                     </p>
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
