Alterando o CSS da página e adicionando a seção de entretenimento

--- a/css_support_class/css/index.html
+++ b/css_support_class/css/index.html
@@ -22,6 +22,9 @@
                     <li>
                         <a href="#tecnologia" title="Ir para a seção de tecnologia">Tecnologia</a>
                     </li>
+                    <li>
+                        <a href="#entretenimento" title="Ir para a seção de entretenimento">Entretenimento</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -153,6 +156,36 @@
                     <h3>ChatGPT erra mais de 50% das respostas em estudo de universidade dos EUA</h3>
                     <p>
                         Um estudo da universidade de Purdue, nos EUA, decidiu testar a eficácia do ChatGPT para responder a centenas de perguntas sobre engenharia de software. O resultado não foi muito animador para a IA, com 52% das respostas incorretas. A intenção da pesquisa era comparar as respostas do ChatGPT com as do Stack Overflow, uma plataforma popular entre desenvolvedores e engenheiros de software para a consulta de dúvidas. 
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section id="entretenimento">
+        <div class="container">
+            <h2>Entretenimento</h2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/Barbie.png" alt="Barbie">
+                    <header>
+                        <time>13/08/2023 às 13:00</time>
+                    </header>
+                    <h3>Barbie chega a US$ 1 bilhão em bilheteria mundial</h3>
+                    <p>
+                        Três semanas após o lançamento, o filme <q>Barbie</q> alcançou no domingo (6) a marca de US$ 1 bilhão em bilheteria global.
+                        Os dados sobre o final de semana de todo o mundo ainda não estão fechados. Mas, de acordo com informações do site Box Office Mojo, o longa-metragem já acumulou pouco mais de US$ 1,031 bilhão até a tarde de hoje.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>     
+                </article>
+                <article>
+                    <img src="./imagens/sound-of-freedom.png" alt="Sound of freedom">
+                    <header>
+                        <time>13/08/2023 às 13:00</time>
+                    </header>
+                    <h3>Sound of Freedom estreia nos cinemas brasileiros em setembro</h3>
+                    <p>
+                        A Paris Filmes anunciou nesta sexta-feira (11) o lançamento de Som da Liberdade no Brasil. Segundo a distribuidora, o filme chegará às salas nacionais em 21 de setembro. Um dos filmes mais polêmicos do ano, a produção é baseada em uma história real e acompanha o ex-agente especial do Governo Americano Tim Ballard (Jim Caviezel), que embarca em uma missão arriscada para resgatar crianças vítimas de tráfico infantil. Na Colômbia, Ballard decide deixar seu cargo no Governo para seguir em busca da quadrilha em sua jornada que, agora, se torna pessoal.
                     </p>
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
