Alterando o css da página

--- a/css_support_class/css/index.html
+++ b/css_support_class/css/index.html
@@ -132,7 +132,7 @@
                     <h3>Bard inteligência artificial do Google</h3>
                     <p>
                         O Google Bard é um chatbot de Inteligência Artificial desenvolvido pelo Google que foi criado para responder perguntas e interagir com os usuários como se fosse um ser humano. Ele é baseado no modelo de linguagem de IA chamado PaLM 2 e está disponível em mais de 40 idiomas. <br>
-                        Para acessar Basta entrar no endereço <a href="https://bard.google.com" target="_blank" class="link-externo">bard.google.com</a> tanto pelo celular quanto pelo computador. 
+                        Para acessar Basta entrar no endereço <a class="link-externo"href="https://bard.google.com" target="_blank" class="link-externo">bard.google.com</a> tanto pelo celular quanto pelo computador. 
                     </p>
                     <a href="#" title="Leia a notícia completa">Ler mais</a>     
                 </article>
